# crewAI-examples

game-builder-crew/: pyproject.toml
game-builder-crew/output_game/: output_game.html
game-builder-crew/src/game_builder_crew/: crew.py  gemini.py  gemini_wrapper.py  main.py
game-builder-crew/src/game_builder_crew/config/: agents.yaml  gamedesign.yaml  tasks.yaml
starter_template/: .env.example  agents.py  gemini_wrapper.py  main.py  prompt.txt  pyproject.toml  tasks.py
starter_template/output_game/: output_game.css  output_game.html  output_game.js  style.css
starter_template/templates/: game.js  index.html  style.css
